# office_oxide

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .taplo.toml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  GAPS.md  LICENSE-MIT  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  bench_python.py  bench_results.json  cbindgen.toml  clippy.toml  codecov.yml  deny.toml  llms.txt  pyproject.toml  rustfmt.toml  todo.md
.devin/: wiki.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/hooks/: pre-commit
.github/scripts/: bump-version.sh  check-versions.sh  extract-release-notes.sh
.github/templates/: office-oxide.json  office-oxide.rb
.github/workflows/: ci.yml  cla.yml  codeql.yml  outdated.yml  pr-quality.yml  python.yml  release.yml  scorecard.yml  template-compliance.yml
bench_rust/: Cargo.toml
bench_rust/src/: dotext_perfile.rs  find_oom.rs  main.rs
crates/cfb_oxide/: Cargo.toml
crates/cfb_oxide/src/: blip.rs  directory.rs  error.rs  header.rs  lib.rs  reader.rs
crates/doc_oxide/: Cargo.toml
crates/doc_oxide/src/: document.rs  error.rs  fib.rs  images.rs  lib.rs  piece_table.rs
crates/docx_oxide/: Cargo.toml
crates/docx_oxide/src/: document.rs  edit.rs  error.rs  formatting.rs  headers.rs  hyperlink.rs  image.rs  lib.rs  numbering.rs  paragraph.rs  styles.rs  table.rs  text.rs  write.rs
crates/docx_oxide/tests/: integration.rs
crates/office_core/: Cargo.toml
crates/office_core/src/: content_types.rs  editable.rs  error.rs  lib.rs  opc.rs  properties.rs  relationships.rs  theme.rs  traits.rs  xml.rs
crates/office_core/tests/: integration.rs
crates/office_oxide/: Cargo.toml
crates/office_oxide/examples/: validate.rs
crates/office_oxide/src/: convert_docx.rs  convert_pptx.rs  convert_xlsx.rs  create.rs  edit.rs  error.rs  format.rs  ir.rs  ir_render.rs  lib.rs  python.rs  wasm.rs
crates/office_oxide/tests/: integration.rs
crates/office_oxide_cli/: Cargo.toml  README.md
crates/office_oxide_cli/src/: main.rs
crates/office_oxide_cli/src/commands/: html.rs  info.rs  ir.rs  markdown.rs  mod.rs  text.rs
crates/office_oxide_mcp/: Cargo.toml  README.md
crates/office_oxide_mcp/src/: main.rs  protocol.rs
crates/ppt_oxide/: Cargo.toml
crates/ppt_oxide/src/: document.rs  error.rs  images.rs  lib.rs  records.rs  text.rs
crates/pptx_oxide/: Cargo.toml
crates/pptx_oxide/src/: edit.rs  error.rs  lib.rs  presentation.rs  slide.rs  text.rs  write.rs
crates/pptx_oxide/tests/: integration.rs
crates/xls_oxide/: Cargo.toml
crates/xls_oxide/src/: cell.rs  error.rs  images.rs  lib.rs  records.rs  sst.rs  workbook.rs
crates/xlsx_oxide/: Cargo.toml
crates/xlsx_oxide/src/: cell.rs  date.rs  edit.rs  error.rs  lib.rs  shared_strings.rs  styles.rs  text.rs  workbook.rs  worksheet.rs  write.rs
crates/xlsx_oxide/tests/: integration.rs
csharp/: OfficeOxide.sln
csharp/OfficeOxide/: Document.cs  EditableDocument.cs  NativeMethods.cs  OfficeOxide.csproj  OfficeOxideException.cs  PptxWriter.cs  README.md  XlsxWriter.cs
csharp/OfficeOxide.Tests/: BasicTests.cs  OfficeOxide.Tests.csproj
docs/: ARCHITECTURE.md  COMPETITIVE_LANDSCAPE.md  MISSION.md  README.md  getting-started-c.md  getting-started-csharp.md  getting-started-go.md  getting-started-javascript.md  getting-started-python.md  getting-started-rust.md  getting-started-wasm.md
docs/architecture/: README.md
docs/specs/: docx_spec.md  opc_shared_spec.md  pptx_spec.md  xlsx_spec.md
examples/: README.md
examples/c/: extract.c
examples/csharp/01_extract/: 01_extract.csproj  Program.cs
examples/csharp/02_create_from_markdown/: Program.cs
examples/csharp/03_edit/: Program.cs
examples/csharp/Extract/: Program.cs
examples/csharp/Replace/: Program.cs
examples/javascript/: 01_extract.mjs  02_create_from_markdown.mjs  03_edit.mjs  extract.mjs  read_xlsx.mjs  replace.mjs
examples/python/: extract.py  read_xlsx.py  replace.py
examples/rust/: 01_extract.rs  02_create_rich.rs  03_create_xlsx.rs  04_create_pptx.rs  05_edit.rs  06_from_markdown.rs  extract.rs  make_smoke.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_parse.rs
go/: README.md  cgo_dev.go  cgo_dev_unix.go  cgo_dev_windows.go  go.mod  office_oxide.go  office_oxide_test.go
include/office_oxide_c/: office_oxide.h
js/: README.md  package-lock.json  package.json
js/lib/: index.cjs  index.d.ts  index.js  native.js
js/scripts/: check-prebuild.cjs
js/test/: basic.test.mjs
python/: README.md
python/office_oxide/: __init__.py  _native.pyi
scripts/: bench-requirements.txt  bench.sh
src/: convert_doc.rs  convert_docx.rs  convert_ppt.rs  convert_pptx.rs  convert_xls.rs  convert_xlsx.rs  create.rs  edit.rs  error.rs  ffi.rs  format.rs  ir.rs  ir_from_markdown.rs  ir_render.rs  lib.rs  python.rs  wasm.rs
src/cfb/: blip.rs  directory.rs  error.rs  header.rs  mod.rs  reader.rs
src/core/: content_types.rs  core_properties.rs  editable.rs  embedded_fonts.rs  error.rs  mod.rs  opc.rs  parallel.rs  properties.rs  relationships.rs  theme.rs  traits.rs  units.rs  xml.rs
src/doc/: document.rs  error.rs  fib.rs  images.rs  mod.rs  piece_table.rs
src/docx/: document.rs  edit.rs  error.rs  formatting.rs  headers.rs  hyperlink.rs  image.rs  mod.rs  numbering.rs  paragraph.rs  styles.rs  table.rs  text.rs  write.rs
src/ppt/: document.rs  error.rs  images.rs  mod.rs  persist.rs  records.rs  text.rs
src/pptx/: edit.rs  error.rs  mod.rs  presentation.rs  shape.rs  slide.rs  text.rs  write.rs
src/xls/: cell.rs  error.rs  images.rs  mod.rs  records.rs  sst.rs  workbook.rs
src/xlsx/: cell.rs  date.rs  edit.rs  error.rs  mod.rs  numfmt.rs  shared_strings.rs  styles.rs  text.rs  workbook.rs  worksheet.rs  write.rs
tests/: core_integration.rs  docx_integration.rs  ir_roundtrip_idempotence.rs  office_integration.rs  pptx_integration.rs  write_integration.rs  xlsx_integration.rs  xlsx_row_cap.rs
wasm-pkg/: README.md  package.json
(+14 files in other folders)
