[package]
name = "docx_oxide"
description = "High-performance Word document (.docx) processing in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
office_core.workspace = true
quick-xml.workspace = true
thiserror.workspace = true
serde.workspace = true
log.workspace = true

[features]
mmap = ["office_core/mmap"]
