[package]
name = "office_core"
description = "Shared OPC/ZIP/XML primitives for OOXML document processing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
quick-xml.workspace = true
zip.workspace = true
thiserror.workspace = true
serde.workspace = true
log.workspace = true
encoding_rs = "0.8"
memmap2 = { workspace = true, optional = true }

[features]
mmap = ["dep:memmap2"]
