[package]
name = "office_oxide_cli"
description = "CLI tool for Office document processing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "office-oxide"
path = "src/main.rs"

[dependencies]
office_oxide = { path = "../office_oxide" }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
